# spotify-to-tidal

./: .gitignore  README.md  config.json  main.py  pyproject.toml
