[project]
name = "spotify-to-tidal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "rapidfuzz>=3.14.1",
    "scikit-learn>=1.7.2",
    "spotipy>=2.25.1",
    "tdqm>=0.0.1",
    "tidalapi>=0.8.8",
]
